remove all dlog related stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ rand = "^0.3.14"
 libc = "^0.2.0"
 num = "^0.2"
 num-traits = "^0.2.6"
+itertools = "^0.7.8"
 base_conversion = { path = "base_conversion" }
+futures-preview =" ^0.3.0-alpha.9"
 
 [dev-dependencies]
 criterion = "0.2"
