first attempt at parallel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ rand = "^0.3.14"
 libc = "^0.2.0"
 num = "^0.2"
 num-traits = "^0.2.6"
+scoped-pool = "^1"
+num_cpus = "^1"
 base_conversion = { path = "base_conversion" }
 
 [dev-dependencies]
